--- a/GO/API-GO/docker-compose.yml
+++ b/GO/API-GO/docker-compose.yml
@@ -1,4 +1,13 @@
 services:
+  go_api:
+    container_name: go_api
+    image: go_api
+    build: .
+    ports:
+      - "8000:8000"
+    depends_on:
+      - go_db
+
   go_db:
     container_name: go_db
     image: postgres:latest
@@ -10,6 +19,6 @@ services:
       - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
-  
+
 volumes:
   pgdata: {}
